Fact of the day - text overflow bug fixed (#123)
* Created Fact of the Day component

Created Fact of the Day widget


* added css to fact of the day component

* Modified css to follow the style conventions from wiki

* Did shallow testing for fact of the day component, and made the svg image

* Resolved PR issues

* Added test for endpoint calls

* Removed fixed height of div to so full text displays

--- a/client/src/components/FactOfTheDay/style.module.scss
+++ b/client/src/components/FactOfTheDay/style.module.scss
@@ -42,5 +42,4 @@
 .contentContainer {
     display: flex;
     text-align: center;
-    height: 128px;
 }
